# SPY_2

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  HEARTBEAT.md  IDENTITY.md  Makefile  Project_Source_of_Truth.txt  README.md  SOUL.md  TOOLS.md  USER.md  pyproject.toml
docs/: SOT.md  openclaw_spy2_pro.md
scripts/: baseline_otm_credit_v1_gateb.sh  gate_b_eval.py  golden_baseline.sh  run_ingest_day.sh  spy2_openclaw_agent.sh
spy2/: __init__.py
src/spy2/: __main__.py  ibkr.py
src/spy2/backtest/: __init__.py  engine.py  runner.py
src/spy2/cli/: main.py
src/spy2/common/: calendar.py  paths.py
src/spy2/corpactions/: __init__.py  dividends.py  ops.py
src/spy2/data/: validation.py
src/spy2/databento/: ops.py
src/spy2/fees/: __init__.py  ibkr.py  tick.py
src/spy2/options/: __init__.py  chain.py  fill.py  liquidity.py  models.py  selection.py  symbols.py
src/spy2/portfolio/: __init__.py  exits.py  guards.py  models.py
tests/: test_backtest_baseline_otm_credit.py  test_backtest_close_fallback.py  test_backtest_exit_rules.py  test_chain_cache.py  test_cli_commands.py  test_cli_smoke.py  test_fees.py  test_ibkr_connectivity.py  test_liquidity_filters.py  test_opra_statistics.py  test_option_selection.py  test_portfolio_guards.py  test_safe_float.py  test_spread_inside_fill.py  test_summary_metrics.py
