[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spy-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "databento>=0.70.0",
    "duckdb>=1.4.4",
    "exchange-calendars>=4.0.0",
    "pandas>=3.0.0",
    "prometheus-client>=0.24.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["^spy2/"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spy2*"]
